Update sparkmc to new version